# not-a-bird

./: .gitignore  Cargo.toml  ITEMS.md  README.md  README.old.md  TODO.md  gameplay_draft.md  items.pdata.yaml  package-lock.json  package.json  process_element_table.ipynb  recipes.pdata.yaml  unfires_element_table.csv  unfires_element_table.md
.projor/: .pstate.json  schema.dot
.projor/_generated/: indexed-items.pdata.json  indexed-recipes.pdata.json  item-psp22-contracts.pdata.json  items-and-resulting-recipes.pdata.json
.projor/data/: games.pdata.yaml  games.pdata.yaml.bak  items.pdata.yaml  recipes.pdata.yaml
.projor/query/: indexed-items.pquery.js  indexed-recipes.pquery.js  item-psp22-contracts.pquery.js  items-and-resulting-recipes.pquery.js
.projor/schema/: Game.pschema.yaml  IndexedItem.pschema.yaml  IndexedRecipe.pschema.yaml  Item.pschema.yaml  ItemAndResultingRecipes.pschema.yaml  PSP22Contract.pschema.yaml  Recipe.pschema.yaml
.projor/template/: achievements-ts.ptemplate.mustache  content-items-ts-infix.ptemplate.mustache  deployer-copy-game-contracts.ptemplate.mustache  deployer-deployable-games.ptemplate.mustache  deployer-extract-contract-metadata.ptemplate.mustache  docs-element-doc-md.ptemplate.mustache  docs-elements-md.ptemplate.mustache  docs-game-doc-md.ptemplate.mustache  docs-games-md.ptemplate.mustache  docs-recipe-doc-md.ptemplate.mustache  docs-recipes-md.ptemplate.mustache  game-contract-gitignore.ptemplate.mustache  game-contract-package-json.ptemplate.mustache  game-contract-readme.ptemplate.mustache  game-contract-src-cargo-toml.ptemplate.mustache  game-contract-src-lib-rs.ptemplate.mustache  game-model-item-types.ptemplate.mustache  game-model-recipes.ptemplate.mustache  game-singleplayer-on-chain-game.ptemplate.mustache  item-game-contract-generated-constants-rs.ptemplate.mustache  item-psp22-contract-clients-item-contract-interface-ts.ptemplate.mustache  item-psp22-contract-clients-ts.ptemplate.mustache  item-psp22-contract-gitignore.ptemplate.mustache  item-psp22-contract-package-json.ptemplate.mustache  item-psp22-contract-readme.ptemplate.mustache  item-psp22-contract-root-cargo-toml.ptemplate.mustache  item-psp22-contract-src-cargo-toml.ptemplate.mustache  item-psp22-contract-src-lib-rs.ptemplate.mustache  item-psp222-contract-readme.ptemplate.mustache  items-md.ptemplate.mustache  on-chain-game-contracts-index-ts.ptemplate.mustache  root-cargo-toml.ptemplate.mustache  root-package-json.ptemplate.mustache
contracts.v1/: README.md
contracts.v1/artifacts/: adobe.contract.json  aquifer.contract.json  aromas.contract.json  artesian_well.contract.json  ash.contract.json  barbecue.contract.json  barricade.contract.json  basalt.contract.json  basin.contract.json  beach.contract.json  bear.contract.json  bee.contract.json  beer.contract.json  block.contract.json  blockchain.contract.json  blowhole.contract.json  breeze.contract.json  brick.contract.json  bridge.contract.json  brook.contract.json  canyon.contract.json  cardano.contract.json  cave.contract.json  charcoal.contract.json  charred_ravine.contract.json  clay.contract.json  cloud.contract.json  coin.contract.json  cool_breeze.contract.json  coral.contract.json  creek.contract.json  crystal.contract.json  dam.contract.json  delta.contract.json  depression.contract.json  desert.contract.json  dry_basin.contract.json  dune.contract.json  dust.contract.json  earth.contract.json  (+134 more)
contracts.v1/interfaces/: adobe.interface.json  aquifer.interface.json  aromas.interface.json  artesian_well.interface.json  ash.interface.json  barbecue.interface.json  barricade.interface.json  basalt.interface.json  basin.interface.json  beach.interface.json  bear.interface.json  bee.interface.json  beer.interface.json  block.interface.json  blockchain.interface.json  blowhole.interface.json  breeze.interface.json  brick.interface.json  bridge.interface.json  brook.interface.json  canyon.interface.json  cardano.interface.json  cave.interface.json  charcoal.interface.json  charred_ravine.interface.json  clay.interface.json  cloud.interface.json  coin.interface.json  cool_breeze.interface.json  coral.interface.json  creek.interface.json  crystal.interface.json  dam.interface.json  delta.interface.json  depression.interface.json  desert.interface.json  dry_basin.interface.json  dune.interface.json  dust.interface.json  earth.interface.json  (+134 more)
notebooks/: ai_description_gen.ipynb  ai_element_data.ipynb  ai_image_gen.ipynb  description_merge.ipynb  items_list.ipynb  process_element_table.ipynb  recipes_graph  recipes_list.ipynb
