[workspace]

resolver = "2"
members = [
  "packages/contract-monkey/src",
  "packages/contract-giraffe/src",
  "packages/contract-bee/src",
  "packages/contract-coin/src",
  "packages/contract-swarm/src",
  "packages/contract-hydra/src",
  "packages/contract-monkey-branch/src",
  "packages/contract-bridge/src",
  "packages/contract-golden-gate/src",
  "packages/contract-gold/src",
  "packages/contract-silver/src",
  "packages/contract-rhodium/src",
  "packages/contract-hive/src",
  "packages/contract-transaction/src",
  "packages/contract-block/src",
  "packages/contract-blockchain/src",
  "packages/contract-polkadot/src",
  "packages/contract-peer-review/src",
  "packages/contract-cardano/src",
  "packages/contract-bear/src",
  "packages/contract-beer/src",
  "packages/contract-lock/src",
  "packages/contract-marmalade/src",
  "packages/contract-super-marmalade/src",
  "packages/contract-hyper-marmalade/src",
  "packages/contract-game/src",
  "packages/contract-unifiers/src",
]
exclude = [
  ".cargo",
  "target"
]

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }