[workspace]

resolver = "2"
members = [
  "packages/contract-monkey/src",
  "packages/contract-giraffe/src",
  "packages/contract-bee/src",
  "packages/contract-coin/src",
  "packages/contract-swarm/src",
  "packages/contract-hydra/src",
  "packages/contract-monkey-branch/src",
  "packages/contract-bridge/src",
  "packages/contract-golden-gate/src",
  "packages/contract-gold/src",
  "packages/contract-silver/src",
  "packages/contract-rhodium/src",
  "packages/contract-hive/src",
  "packages/contract-transaction/src",
  "packages/contract-block/src",
  "packages/contract-blockchain/src",
  "packages/contract-polkadot/src",
  "packages/contract-peer-review/src",
  "packages/contract-cardano/src",
  "packages/contract-bear/src",
  "packages/contract-beer/src",
  "packages/contract-lock/src",
  "packages/contract-marmalade/src",
  "packages/contract-super-marmalade/src",
  "packages/contract-hyper-marmalade/src",
  "packages/contract-water/src",
  "packages/contract-fire/src",
  "packages/contract-steam/src",
  "packages/contract-earth/src",
  "packages/contract-mud/src",
  "packages/contract-lava/src",
  "packages/contract-wind/src",
  "packages/contract-dust/src",
  "packages/contract-rain/src",
  "packages/contract-smoke/src",
  "packages/contract-geyser/src",
  "packages/contract-clay/src",
  "packages/contract-sand/src",
  "packages/contract-plant/src",
  "packages/contract-rainbow/src",
  "packages/contract-storm/src",
  "packages/contract-obsidian/src",
  "packages/contract-ash/src",
  "packages/contract-volcano/src",
  "packages/contract-sandstorm/src",
  "packages/contract-cloud/src",
  "packages/contract-fog/src",
  "packages/contract-tree/src",
  "packages/contract-forest/src",
  "packages/contract-seeds/src",
  "packages/contract-pottery/src",
  "packages/contract-brick/src",
  "packages/contract-quicksand/src",
  "packages/contract-glass/src",
  "packages/contract-dune/src",
  "packages/contract-charcoal/src",
  "packages/contract-leaves/src",
  "packages/contract-wildfire/src",
  "packages/contract-jungle/src",
  "packages/contract-frosted/src",
  "packages/contract-crystal/src",
  "packages/contract-magma/src",
  "packages/contract-rock/src",
  "packages/contract-shard/src",
  "packages/contract-pebble/src",
  "packages/contract-mountain/src",
  "packages/contract-fertilizer/src",
  "packages/contract-soot/src",
  "packages/contract-lightning/src",
  "packages/contract-mist/src",
  "packages/contract-haze/src",
  "packages/contract-flood/src",
  "packages/contract-landslide/src",
  "packages/contract-thunder/src",
  "packages/contract-tornado/src",
  "packages/contract-garden/src",
  "packages/contract-ember/src",
  "packages/contract-kiln/src",
  "packages/contract-pollination/src",
  "packages/contract-sinkhole/src",
  "packages/contract-beach/src",
  "packages/contract-wetstone/src",
  "packages/contract-erosion/src",
  "packages/contract-basalt/src",
  "packages/contract-breeze/src",
  "packages/contract-warm/src",
  "packages/contract-soil/src",
  "packages/contract-canyon/src",
  "packages/contract-windmill/src",
  "packages/contract-adobe/src",
  "packages/contract-wall/src",
  "packages/contract-pumice/src",
  "packages/contract-barbecue/src",
  "packages/contract-farm/src",
  "packages/contract-shards/src",
  "packages/contract-molten/src",
  "packages/contract-prism/src",
  "packages/contract-sparkle/src",
  "packages/contract-desert/src",
  "packages/contract-oasis/src",
  "packages/contract-mirage/src",
  "packages/contract-dam/src",
  "packages/contract-firewall/src",
  "packages/contract-barricade/src",
  "packages/contract-plateau/src",
  "packages/contract-pond/src",
  "packages/contract-aromas/src",
  "packages/contract-flower/src",
  "packages/contract-spore/src",
  "packages/contract-spread/src",
  "packages/contract-fertile/src",
  "packages/contract-wetland/src",
  "packages/contract-peat/src",
  "packages/contract-reeds/src",
  "packages/contract-valley/src",
  "packages/contract-river/src",
  "packages/contract-scorched/src",
  "packages/contract-delta/src",
  "packages/contract-estuary/src",
  "packages/contract-riverbank/src",
  "packages/contract-ravine/src",
  "packages/contract-gorge/src",
  "packages/contract-charred/src",
  "packages/contract-echo/src",
  "packages/contract-cave/src",
  "packages/contract-underground/src",
  "packages/contract-whispering/src",
  "packages/contract-spring/src",
  "packages/contract-fountain/src",
  "packages/contract-cool/src",
  "packages/contract-monument/src",
  "packages/contract-waterfall/src",
  "packages/contract-eternal/src",
  "packages/contract-pillar/src",
  "packages/contract-stream/src",
  "packages/contract-zephyr/src",
  "packages/contract-creek/src",
  "packages/contract-brook/src",
  "packages/contract-whisper/src",
  "packages/contract-rivulet/src",
  "packages/contract-tributary/src",
  "packages/contract-murmur/src",
  "packages/contract-watershed/src",
  "packages/contract-aquifer/src",
  "packages/contract-parched/src",
  "packages/contract-fresh/src",
  "packages/contract-groundwater/src",
  "packages/contract-reservoir/src",
  "packages/contract-geothermal/src",
  "packages/contract-artesian/src",
  "packages/contract-basin/src",
  "packages/contract-lake/src",
  "packages/contract-dry/src",
  "packages/contract-depression/src",
  "packages/contract-island/src",
  "packages/contract-lagoon/src",
  "packages/contract-wave/src",
  "packages/contract-reef/src",
  "packages/contract-coral/src",
  "packages/contract-whirl/src",
  "packages/contract-limestone/src",
  "packages/contract-karst/src",
  "packages/contract-quicklime/src",
  "packages/contract-blowhole/src",
  "packages/contract-hot/src",
  "packages/contract-game/src",
  "packages/contract-unifiers/src",
]
exclude = [
  ".cargo",
  "target"
]

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }